--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,15 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      -name: Install avr-gcc
+        run: sudo apt-get install -y avr-libc
+
+      -name: Install binutils-avr
+        run: sudo apt-get install -y binutils-avr
+
+      -name: Install gcc-avr
+        run: sudo apt-get install -y gcc-avr
+
       - name: Make project
         run: make
 
